--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <router-outlet></router-outlet>
 <!-- <svg id="chart"></svg> -->
 <!-- <div id="chart"></div> -->
-<div id="line-chart"></div>
+<!-- <div id="line-chart"></div> -->
+<app-line-chart></app-line-chart>
+<app-guage-chart></app-guage-chart>
