--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,5 @@
 <!-- <svg id="chart"></svg> -->
 <!-- <div id="chart"></div> -->
 <!-- <div id="line-chart"></div> -->
-<app-line-chart></app-line-chart>
-<app-guage-chart></app-guage-chart>
+<!-- <app-line-chart></app-line-chart>
+<app-guage-chart></app-guage-chart> -->
