guare chart update color

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,15 @@
 <!-- <svg id="chart"></svg> -->
 <!-- <div id="chart"></div> -->
 <!-- <div id="line-chart"></div> -->
-<!-- <app-line-chart></app-line-chart>
-<app-guage-chart></app-guage-chart> -->
+<!-- <app-line-chart></app-line-chart> -->
+<app-guage-chart score="0"></app-guage-chart>
+<app-guage-chart score="10"></app-guage-chart>
+<app-guage-chart score="20"></app-guage-chart>
+<app-guage-chart score="30"></app-guage-chart>
+<app-guage-chart score="40"></app-guage-chart>
+<app-guage-chart score="50"></app-guage-chart>
+<app-guage-chart score="60"></app-guage-chart>
+<app-guage-chart score="70"></app-guage-chart>
+<app-guage-chart score="80"></app-guage-chart>
+<app-guage-chart score="90"></app-guage-chart>
+<app-guage-chart score="100"></app-guage-chart>
