--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <router-outlet></router-outlet>
 <!-- <svg id="chart"></svg> -->
 <!-- <div id="chart"></div> -->
-<div id="line-chart"></div>
-<!-- <app-line-chart></app-line-chart>
+<!-- <div id="line-chart"></div> -->
+<!-- <app-line-chart></app-line-chart> -->
 <app-guage-chart score="0"></app-guage-chart>
 <app-guage-chart score="10"></app-guage-chart>
 <app-guage-chart score="20"></app-guage-chart>
@@ -13,4 +13,4 @@
 <app-guage-chart score="70"></app-guage-chart>
 <app-guage-chart score="80"></app-guage-chart>
 <app-guage-chart score="90"></app-guage-chart>
-<app-guage-chart score="100"></app-guage-chart> -->
+<app-guage-chart score="100"></app-guage-chart>
